# KrasneLudy

./: .gitignore  CMakeLists.txt  DOKUMENTACJA.md  DOKUMENTACJA.odt  KrasnoLudki.cbp  KrasnoLudki.depend  KrasnoLudki.layout  Makefile  POPRAWNOŚĆ_ROZWIĄZANIA.md  POPRAWNOŚĆ_ROZWIĄZANIA.odt  convert_to_docx.py  main.cpp  main_old  main_old.cpp  save_file_1.txt  test  windows_compile.bat
DataStructures/: Country.h  DataStructures.h  Location.cpp  Location.h  country.cpp  country.h  datastructures.h  house.cpp  house.h  location.cpp  location.h  road.cpp  road.h  workplace.cpp  workplace.h
GLUGLU/: GLUGLU.h  GLUGLU_functions.h  GLUGLU_structures.h  f1.txt
GLUGLU/datastructures/: datastructure_blueprint.h  intervalTree.h
GLUGLU/datastructures/multidimentional/: multidim.h  multidim_definition.h
GLUGLU/datastructures/trees/: b_tree.h  b_tree_definition.h  bs_tree.h  bs_tree_definition.h  heap.h  heap_definition.h  n_tree.h  t_tree.h  t_tree_definition.h
GLUGLU/functions/: binary_search.h  country_generator.h  distance.h  expand_array.h  expand_array_to.h  expand_matrix.h  expand_matrix_to.h  huffman_code.cpp  huffman_code.h  huffman_compression.cpp  huffman_compression.h  max.h  min.h  new_line.cpp  new_line.h  progressbar.h  tabulator.cpp  tabulator.h
GLUGLU/functions/tests/: huffman_tests.cpp  (+1 more)
src/: Constants.h  constant_values.h
src/backend/: GameState.h  GraphProcessing.h  SettingsManager.h  StateManager.h  UIHelpers.cpp  UIHelpers.h
src/states/: Credits.cpp  Credits.h  Generation.h  Options.h  Title.cpp  Title.h  Visualization.cpp  Visualization.h
(+28 files in other folders)
